--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     console.log(AgoraGS)
     const { Agora, extensions, layer, provider } = AgoraGS
 
-    extensions.WSServer.setOption({
+    /* extensions.WSServer.setOption({
       url: '192.168.239.27:8093/socket/resend'
     })
-    Agora.use(extensions.WSServer)
+    Agora.use(extensions.WSServer) */
 
     Agora.use(extensions.Plot)
 
@@ -39,6 +39,7 @@
       fileExtension: 'png'
     })
     const prvdLayer = new layer.Provider('影像图层')
+    
     prvdLayer.addChild(tilesProvide)
 
     agora.addLayer(prvdLayer)
